oxifft-codegen/tests/compile_fail/gen_rader_unknown_prime.rs
use oxifft_codegen::gen_rader_codelet;

gen_rader_codelet!(7);

fn main() {}
